Test adding a bitmap to art provider

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,5 +57,6 @@ add_subdirectory(webview)
 add_subdirectory(wizard)
 add_subdirectory(aui)
 add_subdirectory(artprov)
+add_subdirectory(toolbar)
 
 
