--- a/sample.rc
+++ b/sample.rc
@@ -20,6 +20,8 @@ aaaaaaaa ICON "sample.ico"
 // this icon is used with wxFrame::SetIcon()
 sample ICON "sample.ico"
 
+camera_search RCDATA "icons8-camera-identification-50.png"
+
 // set this to 1 if you don't want to use manifest resource (manifest resource
 // is needed to enable visual styles on Windows XP - see docs/msw/winxp.txt
 // for more information)
